# coop3

./: addition_hints.md  new proposal.md  single_model_perspective_extraction_spec_v1.md
demos/: _demo_common.py  demo_before_after.py  demo_compete.py  demo_decompose.py  demo_evaluate_live_run.py  demo_final.py  demo_live_pipeline.py  demo_stress.py  demo_trace.py
single_model_perspective_extractor/: README.md  pyproject.toml  pytest.ini
single_model_perspective_extractor/demos/: demo_decompose.py
single_model_perspective_extractor/src/perspective_extractor/: __init__.py  axes.py  axes_stage.py  baseline.py  cli.py  compete.py  decompose.py  evaluate.py  expand.py  expand_stage.py  final.py  fixtures.py  improve.py  knowledge.py  llm.py  models.py  normalize.py  normalize_stage.py  openrouter.py  pipeline.py  policy.py  proactive.py  prompts.py  review.py  stress.py  synthesize.py  trace.py
single_model_perspective_extractor/src/perspective_extractor/legacy/: __init__.py  axes.py  expand.py  review.py  synthesize.py
single_model_perspective_extractor/tests/: __init__.py  test_axes.py  test_cli.py  test_decompose.py  test_expand.py  test_knowledge.py  test_models_phase1.py  test_normalize.py  test_phase1_live_modules.py  test_phase1_stages.py  test_pipeline.py  test_review.py  test_stage_modules.py  test_synthesize.py
single_model_perspective_extractor/tests/integration/: __init__.py  test_openrouter_smoke.py  test_policy_ab.py
single_model_perspective_extractor/tests/unit/: __init__.py  test_baseline.py  test_phase1_contracts.py
tests/: conftest.py  (+13 more)
