[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "single-model-perspective-extractor"
version = "0.1.0"
description = "Single-model perspective extractor scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" },
]
dependencies = []

[project.scripts]
perspective-extractor = "perspective_extractor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
